prevent wrapping of time since last gps ping (#718)
and remove padding between headsign and last gps ping so the headsign
can be longer without wrapping

and make headsign less likely to wrap and unwrap by preventing width
changes until the data is 100 seconds old

--- a/assets/css/properties_panel/_header.scss
+++ b/assets/css/properties_panel/_header.scss
@@ -16,7 +16,9 @@
 .m-properties-panel__variant {
   border-left: 1px solid $color-rule;
   flex: 1 1 auto;
-  padding: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
 }
 
 .m-properties-panel__inbound-outbound {
@@ -78,16 +80,20 @@
 .m-properties-panel__close-ping {
   align-items: flex-end;
   display: flex;
+  flex: 0 0 auto;
   flex-direction: column;
   justify-content: space-between;
 
   .m-close-button,
   .m-properties-panel__last-gps-ping {
-    padding: 1rem;
+    padding-bottom: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
   }
 }
 
 .m-properties-panel__last-gps-ping {
   @include font-small;
   color: $color-font-grey;
+  min-width: 3rem;
 }
